Seccion de inicio responsiva

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                 <h1 class="text-title-inicio">Sueña,
                   Imagina,
                   Crea</h1>
+
+                  <h1 class="text-title-inicio2">Sueña, Imagina, Crea</h1>
               </div>
 
               <!-- Columna para la descripción -->
