--- a/index.html
+++ b/index.html
@@ -91,7 +91,22 @@
                   Imagina,
                   Crea</h1>
 
-                  <h1 class="text-title-inicio2">Sueña, Imagina, Crea</h1>
+                <h1 class="text-title-inicio2">Sueña, Imagina, Crea</h1>
+
+                <!-- Texto con animación -->
+
+                <div class="content">
+                  <div class="content__container">
+                    <ul class="content__container__list">
+                      <li class="content__container__list__item">SUEÑA</li>
+                      <li class="content__container__list__item">IMAGINA</li>
+                      <li class="content__container__list__item">CREA</li>
+                      <li class="content__container__list__item">SOFTWARE</li>
+                    </ul>
+                  </div>
+                </div>
+
+
               </div>
 
               <!-- Columna para la descripción -->
@@ -772,12 +787,12 @@
               </div>
 
               <div class="col col-lg-6 col-md-12">
-               <div class="container-form-contacto">
-                <div class="container-contact-form">
+                <div class="container-form-contacto">
+                  <div class="container-contact-form">
 
-                  
+
+                  </div>
                 </div>
-               </div>
               </div>
             </div>
           </div>
