sección inicio y nosotros

--- a/index.html
+++ b/index.html
@@ -135,9 +135,32 @@
         <!-- Sección de nosotros -->
         <section id="nosotros">
           <div class="container-nosotros">
+
+            <!-- Componente que se mostrará en dispositivos pequeños -->
+            <div class="row fila-nosotros-mobile">
+              <div class="col-sm-12 container-content-nosotros-mobile">
+                <div class="container-title-nosotros-mobile">
+                  <!-- Contenedor para el circulo con una letra -->
+                  <div class="circle-nosotros-mobile">
+                    <span>M</span>
+                  </div>
+
+                  <div class="rest-text-nosotros-mobile">
+                    <span>ision</span>
+                  </div>
+                </div>
+
+                <div class="container-description-nosotros-mobile">
+                  <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
+                    software a la medida que logren impulsar su gestión empresarial.</p>
+                </div>
+              </div>
+            </div>
+
+
+
             <!-- Fila principal -->
             <div class="row fila-nosotros">
-
               <!-- Contenedor para el circulo con texto -->
               <div class="container-content-circle">
                 <div class="circle2">
