sección inicio y nosotros

--- a/index.html
+++ b/index.html
@@ -155,6 +155,40 @@
                     software a la medida que logren impulsar su gestión empresarial.</p>
                 </div>
               </div>
+              <div class="col-sm-12 container-content-nosotros-mobile">
+                <div class="container-title-nosotros-mobile">
+                  <!-- Contenedor para el circulo con una letra -->
+                  <div class="circle-nosotros-mobile">
+                    <span>V</span>
+                  </div>
+
+                  <div class="rest-text-nosotros-mobile">
+                    <span>ision</span>
+                  </div>
+                </div>
+
+                <div class="container-description-nosotros-mobile">
+                  <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
+                    software a la medida que logren impulsar su gestión empresarial.</p>
+                </div>
+              </div>
+              <div class="col-sm-12 container-content-nosotros-mobile">
+                <div class="container-title-nosotros-mobile">
+                  <!-- Contenedor para el circulo con una letra -->
+                  <div class="circle-nosotros-mobile">
+                    <span>V</span>
+                  </div>
+
+                  <div class="rest-text-nosotros-mobile">
+                    <span>alores</span>
+                  </div>
+                </div>
+
+                <div class="container-description-nosotros-mobile">
+                  <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
+                    software a la medida que logren impulsar su gestión empresarial.</p>
+                </div>
+              </div>
             </div>
 
 
