--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   </div>
 
                   <div class="rest-text-nosotros-mobile">
-                    <span>ision</span>
+                    <span>isión</span>
                   </div>
                 </div>
 
@@ -163,7 +163,7 @@
                   </div>
 
                   <div class="rest-text-nosotros-mobile">
-                    <span>ision</span>
+                    <span>isión</span>
                   </div>
                 </div>
 
@@ -202,7 +202,7 @@
                 </div>
 
                 <div class="rest-text2">
-                  <span>ision</span>
+                  <span>isión</span>
                 </div>
 
               </div>
@@ -230,7 +230,7 @@
               <div class="container-content-circle-visi">
 
                 <div class="rest-text2">
-                  <span>Visio</span>
+                  <span>Visión</span>
                 </div>
 
                 <div class="circle2 circle2-visi">
@@ -295,8 +295,9 @@
         <section id="more-us">
           <div class="more-us">
             <div class=" ddd">
+              
               <div class="row">
-                <div class="col nuevo-div col-lg-4 col-sm-12">
+                <div class="col nuevo-div col-lg-4 col-sm-12 col-12">
                   <img class="image-more-us-c" src="images/celula.jpg" alt="">
 
                   <h3 class="title-more-us-c">Cercanía constante</h3>
@@ -306,11 +307,11 @@
                   </div>
                 </div>
 
-                <div class="col col-lg-8 col-sm-12">
+                <div class="col col-lg-8 col-sm-12 col-12">
 
                   <!-- Fila para manejar una sola sección -->
                   <div class="row">
-                    <div class="col col-lg-12 col-sm-12 enfoque-v">
+                    <div class="col col-lg-12 col-sm-12 col-12 enfoque-v">
 
                       <!-- contenedor para el contenido de enfoque de valor -->
                       <div class="content-enfoque-v">
@@ -392,7 +393,7 @@
           <div class="container-tecnologias">
             <div class="row row-tecnologias">
 
-              <div class="col col-lg-6 col-md-12">
+              <div class="col col-lg-6 col-md-12 col-12">
 
                 <div class="texts-tecnologias">
                   <div class="container-title-tecnologias">
@@ -409,7 +410,7 @@
 
               </div>
 
-              <div class="col col-lg-6 col-md-12 carrousel-tecnologias">
+              <div class="col col-lg-6 col-md-12 col-12 carrousel-tecnologias">
                 <div class="container-carrousel">
 
                   <!-- Botones para el carrousel -->
@@ -778,6 +779,33 @@
           </div>
         </section>
 
+        <!-- Sección de Servicios mobile -->
+        <section id="servicios-mobile">
+          <!-- Contenedor principal para la sección de servicios -->
+          <div class="container-servicios">
+            <div class="container-item-servicio">
+
+                <!-- Contenedor para la imagen del item -->
+                <div class="container-image-item-servicio">
+                  <img class="image-servicio-item" src="images/celula.jpg" alt="Imagen de servicio">
+                </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Desarrollo de API</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Soluciones de desarrollo web que facilitan
+                  los flujos de trabajo, aumentan los ingresos
+                  y optimizan las operaciones comerciales.</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- Seccion de Contacto -->
         <section id="contacto">
 
@@ -787,7 +815,7 @@
 
 
 
-              <div class="col col-lg-6 col-md-12">
+              <div class="col col-lg-6 col-md-12 col-12">
 
                 <div class="container-text-contacto">
                   <!-- Contenedor para el titulo -->
@@ -843,7 +871,7 @@
 
               </div>
 
-              <div class="col col-lg-6 col-md-12">
+              <div class="col col-lg-6 col-md-12 col-12">
                 <div class="container-form-contacto">
                   <div class="container-contact-form">
 
@@ -861,13 +889,13 @@
           <div class="container-footer">
             <div class="row fila-footer">
 
-              <div class="col col-lg-4">
+              <div class="col col-lg-4 col-12">
                 <div class="container-logo">
                   <h1>SUCRIMSOFT</h1>
                 </div>
               </div>
 
-              <div class="col col-lg-2">
+              <div class="col col-lg-2 col-12">
                 <div class="container-soluciones">
                   <div class="container-title-soluciones">
                     <span>Soluciones</span>
@@ -883,7 +911,7 @@
               </div>
 
 
-              <div class="col col-lg-2">
+              <div class="col col-lg-2 col-12">
                 <div class="container-compania">
                   <div class="container-title-soluciones">
                     <span>Compañía</span>
@@ -899,7 +927,7 @@
               </div>
 
 
-              <div class="col col-lg-4">
+              <div class="col col-lg-4 col-12">
                 <div class="container-redes">
                   <div class="title-redes">
                     <span>REDES SOCIALES</span>
