--- a/index.html
+++ b/index.html
@@ -787,12 +787,12 @@
 
                 <!-- Contenedor para la imagen del item -->
                 <div class="container-image-item-servicio">
-                  <img class="image-servicio-item" src="images/celula.jpg" alt="Imagen de servicio">
+                  <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
                 </div>
 
               <!-- Contenedor para el ttulo del servicio -->
               <div class="container-title-item-servicio">
-                <span>Desarrollo de API</span>
+                <span>Desarrollo Web Personalizado</span>
               </div>
 
 
