sección services responsive

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <section id="more-us">
           <div class="more-us">
             <div class=" ddd">
-              
+
               <div class="row">
                 <div class="col nuevo-div col-lg-4 col-sm-12 col-12">
                   <img class="image-more-us-c" src="images/celula.jpg" alt="">
@@ -469,7 +469,7 @@
 
 
         <!-- Seccion de Servicios -->
-        <section id="services">
+        <section id="services" class="services-lg">
           <!-- Contenedor principal -->
           <div class="container-servicios">
 
@@ -780,15 +780,17 @@
         </section>
 
         <!-- Sección de Servicios mobile -->
-        <section id="servicios-mobile">
+        <section id="servicios-mobile" class="services-sm">
           <!-- Contenedor principal para la sección de servicios -->
           <div class="container-servicios">
+
+            <!-- Primer item -->
             <div class="container-item-servicio">
 
-                <!-- Contenedor para la imagen del item -->
-                <div class="container-image-item-servicio">
-                  <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
-                </div>
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
 
               <!-- Contenedor para el ttulo del servicio -->
               <div class="container-title-item-servicio">
@@ -803,7 +805,170 @@
                   y optimizan las operaciones comerciales.</p>
               </div>
             </div>
+
+            <!-- Segundo item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/i_despliegue.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Implementacion y Despliegue</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Diseñamos un plan de implementación y despliegue de software a profundidad, evaluando las necesidades
+                  de su empresa, para así brindar tecnologías mejoradas a los usuarios finales.</p>
+              </div>
+            </div>
+
+            <!-- Tercer item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Desarrollo de API</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Desarrollamos APIs confiables, bien documentadas y fáciles de consumir que permiten integraciones flexibles y personalización de productos de software existentes.</p>
+              </div>
+            </div>
+
+            <!-- Cuarto item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Integración de Sistemas</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Confiamos en nuestra experiencia tecnológica en varias industrias para ofrecer aplicaciones web, móviles, de escritorio e híbridas altamente escalables, flexibles e interoperables.</p>
+              </div>
+            </div>
+
+            <!-- Quinto item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Desarrollo de Aplicaciones Personalizadas</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Creamos y mejoramos aplicaciones completamente escalables e innovadoras de acuerdo a las necesidades del cliente.</p>
+              </div>
+            </div>
+
+            <!-- Sexto item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Mantenimiento de Aplicaciones</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Nuestros servicios de mantenimiento y modernización de aplicaciones están diseñados para garantizar la escalabilidad, el rendimiento y la sostenibilidad de toda su infraestructura de software.</p>
+              </div>
+            </div>
+
+            <!-- Septimo item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Integraciones de API</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Creamos API personalizadas para todas las clases de aplicaciones, agregando funcionalidad a sus sistemas de software y facilitando la comunicación entre sus aplicaciones y de terceros.</p>
+              </div>
+            </div>
+
+            <!-- Octavo item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Diseño de UX/UI</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Aproveche las últimas tecnologías, arquitecturas y tendencias de UI / UX para diseñar aplicaciones receptivas y escalables que transforman las experiencias de los clientes a través de múltiples canales.</p>
+              </div>
+            </div>
+
+            <!-- Noveno item -->
+            <div class="container-item-servicio">
+
+              <!-- Contenedor para la imagen del item -->
+              <div class="container-image-item-servicio">
+                <img class="image-servicio-item" src="images/dw_personalizado.jpg" alt="Imagen de servicio">
+              </div>
+
+              <!-- Contenedor para el ttulo del servicio -->
+              <div class="container-title-item-servicio">
+                <span>Migraciones y Actualizaciones de Datos</span>
+              </div>
+
+
+              <!-- Contendor para la descripción del servicio -->
+              <div class="container-text-item-servicio">
+                <p>Realizamos migraciones de datos en la nube, actualizaciones del sistema y otros servicios vitales de modernización de software, dando importancia al tiempo de actividad del sistema y la integridad de los datos.</p>
+              </div>
+            </div>
           </div>
+
+
         </section>
 
         <!-- Seccion de Contacto -->
