sección services responsive

--- a/index.html
+++ b/index.html
@@ -139,56 +139,29 @@
             <!-- Componente que se mostrará en dispositivos pequeños -->
             <div class="row fila-nosotros-mobile">
               <div class="col-sm-12 container-content-nosotros-mobile">
-                <div class="container-title-nosotros-mobile">
-                  <!-- Contenedor para el circulo con una letra -->
-                  <div class="circle-nosotros-mobile">
-                    <span>M</span>
-                  </div>
 
-                  <div class="rest-text-nosotros-mobile">
-                    <span>isión</span>
+                <!-- Contenedor para la imagen de nosotros -->
+                <div class="container-image-nosotros-mobile">
+                  <img class="image-nosotros-mobile" src="images/domo.jpg" alt="">
+
+                  <div class="container-title-nosotros-mobile">
+                    <!-- Contenedor para el circulo con una letra -->
+                    <div class="circle-nosotros-mobile">
+                      <span>Visión</span>
+                    </div>
+
+                    
                   </div>
                 </div>
 
-                <div class="container-description-nosotros-mobile">
-                  <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
-                    software a la medida que logren impulsar su gestión empresarial.</p>
-                </div>
-              </div>
-              <div class="col-sm-12 container-content-nosotros-mobile">
-                <div class="container-title-nosotros-mobile">
-                  <!-- Contenedor para el circulo con una letra -->
-                  <div class="circle-nosotros-mobile">
-                    <span>V</span>
-                  </div>
 
-                  <div class="rest-text-nosotros-mobile">
-                    <span>isión</span>
-                  </div>
-                </div>
 
                 <div class="container-description-nosotros-mobile">
                   <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
                     software a la medida que logren impulsar su gestión empresarial.</p>
                 </div>
               </div>
-              <div class="col-sm-12 container-content-nosotros-mobile">
-                <div class="container-title-nosotros-mobile">
-                  <!-- Contenedor para el circulo con una letra -->
-                  <div class="circle-nosotros-mobile">
-                    <span>V</span>
-                  </div>
 
-                  <div class="rest-text-nosotros-mobile">
-                    <span>alores</span>
-                  </div>
-                </div>
-
-                <div class="container-description-nosotros-mobile">
-                  <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
-                    software a la medida que logren impulsar su gestión empresarial.</p>
-                </div>
-              </div>
             </div>
 
 
@@ -843,7 +816,8 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Desarrollamos APIs confiables, bien documentadas y fáciles de consumir que permiten integraciones flexibles y personalización de productos de software existentes.</p>
+                <p>Desarrollamos APIs confiables, bien documentadas y fáciles de consumir que permiten integraciones
+                  flexibles y personalización de productos de software existentes.</p>
               </div>
             </div>
 
@@ -863,7 +837,8 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Confiamos en nuestra experiencia tecnológica en varias industrias para ofrecer aplicaciones web, móviles, de escritorio e híbridas altamente escalables, flexibles e interoperables.</p>
+                <p>Confiamos en nuestra experiencia tecnológica en varias industrias para ofrecer aplicaciones web,
+                  móviles, de escritorio e híbridas altamente escalables, flexibles e interoperables.</p>
               </div>
             </div>
 
@@ -883,7 +858,8 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Creamos y mejoramos aplicaciones completamente escalables e innovadoras de acuerdo a las necesidades del cliente.</p>
+                <p>Creamos y mejoramos aplicaciones completamente escalables e innovadoras de acuerdo a las necesidades
+                  del cliente.</p>
               </div>
             </div>
 
@@ -903,7 +879,8 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Nuestros servicios de mantenimiento y modernización de aplicaciones están diseñados para garantizar la escalabilidad, el rendimiento y la sostenibilidad de toda su infraestructura de software.</p>
+                <p>Nuestros servicios de mantenimiento y modernización de aplicaciones están diseñados para garantizar
+                  la escalabilidad, el rendimiento y la sostenibilidad de toda su infraestructura de software.</p>
               </div>
             </div>
 
@@ -923,7 +900,8 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Creamos API personalizadas para todas las clases de aplicaciones, agregando funcionalidad a sus sistemas de software y facilitando la comunicación entre sus aplicaciones y de terceros.</p>
+                <p>Creamos API personalizadas para todas las clases de aplicaciones, agregando funcionalidad a sus
+                  sistemas de software y facilitando la comunicación entre sus aplicaciones y de terceros.</p>
               </div>
             </div>
 
@@ -943,7 +921,9 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Aproveche las últimas tecnologías, arquitecturas y tendencias de UI / UX para diseñar aplicaciones receptivas y escalables que transforman las experiencias de los clientes a través de múltiples canales.</p>
+                <p>Aproveche las últimas tecnologías, arquitecturas y tendencias de UI / UX para diseñar aplicaciones
+                  receptivas y escalables que transforman las experiencias de los clientes a través de múltiples
+                  canales.</p>
               </div>
             </div>
 
@@ -963,7 +943,9 @@
 
               <!-- Contendor para la descripción del servicio -->
               <div class="container-text-item-servicio">
-                <p>Realizamos migraciones de datos en la nube, actualizaciones del sistema y otros servicios vitales de modernización de software, dando importancia al tiempo de actividad del sistema y la integridad de los datos.</p>
+                <p>Realizamos migraciones de datos en la nube, actualizaciones del sistema y otros servicios vitales de
+                  modernización de software, dando importancia al tiempo de actividad del sistema y la integridad de los
+                  datos.</p>
               </div>
             </div>
           </div>
