sección services responsive

--- a/index.html
+++ b/index.html
@@ -147,6 +147,29 @@
                   <div class="container-title-nosotros-mobile">
                     <!-- Contenedor para el circulo con una letra -->
                     <div class="circle-nosotros-mobile">
+                      <span>Misión</span>
+                    </div>
+
+                    
+                  </div>
+                </div>
+
+                <!-- Contenedor para la descripción de nosotros -->
+                <div class="container-description-nosotros-mobile">
+                  <p class="text-description-nosotros-mobile">Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
+                    software a la medida que logren impulsar su gestión empresarial.</p>
+                </div>
+              </div>
+
+              <div class="col-sm-12 container-content-nosotros-mobile">
+
+                <!-- Contenedor para la imagen de nosotros -->
+                <div class="container-image-nosotros-mobile">
+                  <img class="image-nosotros-mobile" src="images/circuito.jpg" alt="">
+
+                  <div class="container-title-nosotros-mobile">
+                    <!-- Contenedor para el circulo con una letra -->
+                    <div class="circle-nosotros-mobile">
                       <span>Visión</span>
                     </div>
 
@@ -154,11 +177,30 @@
                   </div>
                 </div>
 
-
-
+                <!-- Contenedor para la descripción de nosotros -->
                 <div class="container-description-nosotros-mobile">
-                  <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de
-                    software a la medida que logren impulsar su gestión empresarial.</p>
+                  <p class="text-description-nosotros-mobile">Ser la empresa líder de consultoría de Software Innovadora y rentable, ofreciendo soluciones que destaquen y se adapten a las necesidades del cliente. Ofreciendo siempre las herramientas de software más actuales del mercado.</p>
+                </div>
+              </div>
+
+              <div class="col-sm-12 container-content-nosotros-mobile">
+
+                <!-- Contenedor para la imagen de nosotros -->
+                <div class="container-image-nosotros-mobile">
+                  <img class="image-nosotros-mobile" src="images/celula.jpg" alt="">
+
+                  <div class="container-title-nosotros-mobile">
+                    <!-- Contenedor para el circulo con una letra -->
+                    <div class="circle-nosotros-mobile">
+                      <span>Valores</span>
+                    </div>
+                    
+                  </div>
+                </div>
+
+                <!-- Contenedor para la descripción de nosotros -->
+                <div class="container-description-nosotros-mobile">
+                  <p class="text-description-nosotros-mobile">Amamos lo que hacemos y creemos en el aprendizaje constante. Por ello ponemos en conjunto nuestras habilidades para lograr grandes resultados en un ambiente, colaborativo, de reconocimiento y respeto.</p>
                 </div>
               </div>
 
