sección services responsive

--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
 
                       <!-- Contenedor para la descripción del ícono -->
                       <div class="container-dscription-icon">
-                        <span>70844 San Jerónimo Coatlán, Oaxaca</span>
+                        <span>djl.juarez@sucrimsoft.com</span>
                       </div>
                     </div>
 
@@ -1059,7 +1059,7 @@
 
                       <!-- Contenedor para la descripción del ícono -->
                       <div class="container-dscription-icon">
-                        <span>70844 San Jerónimo Coatlán, Oaxaca</span>
+                        <span>+52 951 23 29 382 / +52 951 31 01 543</span>
                       </div>
                     </div>
                   </div>
