sección nosotros responsive

--- a/index.html
+++ b/index.html
@@ -311,6 +311,26 @@
           </div>
         </section>
 
+        <!-- Sección de nosotros con íconos -->
+        <section>
+          <div class="section-nosotros-with-icons-mobile">
+
+            <div class="container-item-nosotros-mobile">
+              <div class="title-nosotros-mobile">
+                <span>Misión</span>
+              </div>
+
+              <div class="container-icon-nosotros-mobile">
+                <i class="bi bi-file-code-fill"></i>
+              </div>
+
+              <div class="container-text-nosotros-mobile">
+                Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de software a la medida que logren impulsar su gestión empresarial.
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- Sección de more-us -->
         <section id="more-us">
           <div class="more-us">
@@ -803,6 +823,11 @@
         <section id="servicios-mobile" class="services-sm">
           <!-- Contenedor principal para la sección de servicios -->
           <div class="container-servicios">
+
+            <!-- Título de la sección -->
+            <div class="title-section-services">
+              <span>Nuestros Servicios</span>
+            </div>
 
             <!-- Primer item -->
             <div class="container-item-servicio">
