seccion nosotros mobile

--- a/index.html
+++ b/index.html
@@ -325,7 +325,35 @@
               </div>
 
               <div class="container-text-nosotros-mobile">
-                Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de software a la medida que logren impulsar su gestión empresarial.
+                <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de software a la medida que logren impulsar su gestión empresarial.</p>
+              </div>
+            </div>
+
+            <div class="container-item-nosotros-mobile">
+              <div class="title-nosotros-mobile">
+                <span>Visión</span>
+              </div>
+
+              <div class="container-icon-nosotros-mobile">
+                <i class="bi bi-eye-fill"></i>
+              </div>
+
+              <div class="container-text-nosotros-mobile">
+                <p>Ser la empresa líder de consultoría de Software Innovadora y rentable, ofreciendo soluciones que destaquen y se adapten a las necesidades del cliente. Ofreciendo siempre las herramientas de software más actuales del mercado.</p>
+              </div>
+            </div>
+
+            <div class="container-item-nosotros-mobile">
+              <div class="title-nosotros-mobile">
+                <span>Valores</span>
+              </div>
+
+              <div class="container-icon-nosotros-mobile">
+                <i class="bi bi-puzzle-fill"></i>
+              </div>
+
+              <div class="container-text-nosotros-mobile">
+                <p>Amamos lo que hacemos y creemos en el aprendizaje constante. Por ello ponemos en conjunto nuestras habilidades para lograr grandes resultados en un ambiente, colaborativo, de reconocimiento y respeto.</p>
               </div>
             </div>
           </div>
