seccion nosotros mobile

--- a/index.html
+++ b/index.html
@@ -313,6 +313,12 @@
 
         <!-- Sección de nosotros con íconos -->
         <section>
+
+          <!-- Título de la sección -->
+          <div class="title-section-services">
+            <span>Nosotros</span>
+          </div>
+
           <div class="section-nosotros-with-icons-mobile">
 
             <div class="container-item-nosotros-mobile">
@@ -325,7 +331,8 @@
               </div>
 
               <div class="container-text-nosotros-mobile">
-                <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de software a la medida que logren impulsar su gestión empresarial.</p>
+                <p>Contribuir y dotar a PyMES de herramientas y soluciones tecnológicas de software a la medida que
+                  logren impulsar su gestión empresarial.</p>
               </div>
             </div>
 
@@ -339,7 +346,9 @@
               </div>
 
               <div class="container-text-nosotros-mobile">
-                <p>Ser la empresa líder de consultoría de Software Innovadora y rentable, ofreciendo soluciones que destaquen y se adapten a las necesidades del cliente. Ofreciendo siempre las herramientas de software más actuales del mercado.</p>
+                <p>Ser la empresa líder de consultoría de Software Innovadora y rentable, ofreciendo soluciones que
+                  destaquen y se adapten a las necesidades del cliente. Ofreciendo siempre las herramientas de software
+                  más actuales del mercado.</p>
               </div>
             </div>
 
@@ -353,7 +362,23 @@
               </div>
 
               <div class="container-text-nosotros-mobile">
-                <p>Amamos lo que hacemos y creemos en el aprendizaje constante. Por ello ponemos en conjunto nuestras habilidades para lograr grandes resultados en un ambiente, colaborativo, de reconocimiento y respeto.</p>
+                <p>Amamos lo que hacemos y creemos en el aprendizaje constante. Por ello ponemos en conjunto nuestras
+                  habilidades para lograr grandes resultados en un ambiente, colaborativo, de reconocimiento y respeto.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Sección de more-us mobile -->
+        <section>
+          <div class="container-more-us-mobile">
+            <div class="container-imagen-more-us-mobile">
+              <div class="overlay"></div>
+              <img class="img-mobile-more-us" src="images/mejores-p.jpeg" alt="imagen celula">
+              <div class="text-overlay"><!-- Nuevo elemento para el texto -->
+                <h2>Mejores Prácticas</h2>
+                <p>Utilizamos las mejores prácticas y los métodos estándar del sector para crear y brindar soluciones eficientes que impulsen el crecimiento y la gestión de tus negocios</p>
               </div>
             </div>
           </div>
@@ -1124,7 +1149,7 @@
                 <div class="container-form-contacto">
                   <div class="container-contact-form">
 
-                    
+
                   </div>
                 </div>
               </div>
